# auto-aiming-algorithm

./: CMakeLists.txt  main.cpp
Armor/: ArmorDetect.cpp  ArmorDetect.hpp
Camera/: Camera.cpp  Camera.hpp
Pose/: AngleSolver.cpp  AngleSolver.hpp
